<resources>
    <string name="app_name">NITH online</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="profile_picture">Profile photo</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign out</string>
</resources>