<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="48dp"
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:background="@drawable/et_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:text="@string/log_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_background"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <View
        android:id="@+id/divider"
        style="@style/Widget.Cupcake.Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/bt_login"/>

    <TextView
        android:id="@+id/tv_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>